Restaurant services updated

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,9 @@
 APP_PORT=3000
 MONGODB_URL=mongodb://localhost:27017/restaurant
+GEOCODER_PROVIDER=mapquest
+GEOCODER_API_KEY=
+AWS_S3_BUCKET_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_KEY=
+JWT_SECRET=
+JWT_EXPIRES=1d
